Criação de CRUD empréstimo de livros. Modificações no modelo do esquema do banco de dados e inserção das rotas para operações do CRUD empréstimo no Swagger.
